data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2056.wast
;; 6. **Test Description**: A `br_table` instruction in a loop structure with an improperly nested label, testing if the loop's control flow causes incorrect branch target resolution and enters an infinite loop.

(assert_invalid
  (module
    (func
      (loop (result i32)
        (block (result i32)
          (br_table 0 1 (i32.const 0) (i32.const 0))
        )
      )
      (drop)
    )
  )
  "type mismatch"
)